WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123668
Fix UnicodeWchar after
r157330
.
https://bugs.webkit.org/show_bug.cgi?id=123668
Summary
Fix UnicodeWchar after r157330.
Patrick R. Gansterer
Reported
2013-11-02 10:34:22 PDT
Fix UnicodeWchar after
r157330
.
Attachments
Patch
(11.18 KB, patch)
2013-11-02 10:36 PDT
,
Patrick R. Gansterer
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Patrick R. Gansterer
Comment 1
2013-11-02 10:36:15 PDT
Created
attachment 215811
[details]
Patch
WebKit Commit Bot
Comment 2
2013-11-02 10:38:52 PDT
Attachment 215811
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/unicode/wchar/UnicodeWchar.cpp', u'Source/WTF/wtf/unicode/wchar/UnicodeWchar.h', u'Source/WebCore/ChangeLog', u'Source/WebCore/editing/TextIterator.cpp', u'Source/WebCore/platform/graphics/wince/FontWinCE.cpp', u'Source/WebCore/platform/graphics/wince/GraphicsContextWinCE.cpp', u'Source/WebCore/platform/text/wchar/TextBreakIteratorWchar.cpp']" exit_code: 1 Source/WTF/wtf/unicode/wchar/UnicodeWchar.h:66: enum members should use InterCaps with an initial capital letter. [readability/enum_casing] [4] Source/WTF/wtf/unicode/wchar/UnicodeWchar.h:119: More than one command on the same line [whitespace/newline] [4] Source/WTF/wtf/unicode/wchar/UnicodeWchar.h:119: u_foldCase is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WTF/wtf/unicode/wchar/UnicodeWchar.h:123: u_isprint is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WTF/wtf/unicode/wchar/UnicodeWchar.h:125: u_isspace is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 5 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2013-11-02 14:19:20 PDT
Comment on
attachment 215811
[details]
Patch This looks fine. I’d like you to go further and move these functions into files with the names of the ICU header files instead of UnicodeWchar.h/cpp, and put them in a directory with some name like "FakeICU" or whatever we want to call this minimal ICU-compatible shim you are using for WinCE. This requires changes to the WinCE build system, which is why I didn’t do it.
Patrick R. Gansterer
Comment 4
2013-11-02 14:21:11 PDT
(In reply to
comment #3
)
> (From update of
attachment 215811
[details]
) > This looks fine. I’d like you to go further and move these functions into files with the names of the ICU header files instead of UnicodeWchar.h/cpp, and put them in a directory with some name like "FakeICU" or whatever we want to call this minimal ICU-compatible shim you are using for WinCE. > > This requires changes to the WinCE build system, which is why I didn’t do it.
That's exactly my plan, but I want to fix the build errors first. :-)
WebKit Commit Bot
Comment 5
2013-11-02 14:45:54 PDT
Comment on
attachment 215811
[details]
Patch Clearing flags on attachment: 215811 Committed
r158499
: <
http://trac.webkit.org/changeset/158499
>
WebKit Commit Bot
Comment 6
2013-11-02 14:45:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug