Fix UnicodeWchar after r157330. https://bugs.webkit.org/show_bug.cgi?id=123668

Reviewed by Darin Adler.

Source/WebCore:

* editing/TextIterator.cpp:
(WebCore::SearchBuffer::append):
* platform/graphics/wince/FontWinCE.cpp:
(WebCore::generateComponents):
* platform/graphics/wince/GraphicsContextWinCE.cpp:
(WebCore::GraphicsContext::drawText):
* platform/text/wchar/TextBreakIteratorWchar.cpp:
(WebCore::isCharStop):
(WebCore::isLineStop):
(WebCore::isSentenceStop):
(WebCore::WordBreakIterator::next):
(WebCore::WordBreakIterator::previous):

Source/WTF:

* wtf/unicode/wchar/UnicodeWchar.cpp:
(unorm_normalize):
(u_strFoldCase):
(u_strToLower):
(u_strToUpper):
* wtf/unicode/wchar/UnicodeWchar.h:
(u_foldCase):
(u_isprint):
(u_isspace):


Canonical link: https://commits.webkit.org/141852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158499 268f45cc-cd09-0410-ab3c-d52691b4dbfc