Source/WebCore/platform/text/wchar/TextBreakIteratorWchar.cpp
@@ -28,7 +28,6 @@
 #include <wtf/unicode/Unicode.h>
 
 using namespace WTF;
-using namespace WTF::Unicode;
 using namespace std;
 
 namespace WebCore {
@@ -36,18 +35,18 @@ namespace WebCore {
 // Hack, not entirely correct
 static inline bool isCharStop(UChar c)
 {
-    CharCategory charCategory = category(c);
-    return charCategory != Mark_NonSpacing && (charCategory != Other_Surrogate || (c < 0xd800 || c >= 0xdc00));
+    int8_t charType = u_charType(c);
+    return U_MASK(charType) & U_GC_MN_MASK || (U_MASK(charType) & U_GC_CS_MASK && (c >= 0xd800 && c < 0xdc00));
 }
 
 static inline bool isLineStop(UChar c)
 {
-    return category(c) != Separator_Line;
+    return !(U_GET_GC_MASK(c) & U_GC_ZL_MASK);
 }
 
 static inline bool isSentenceStop(UChar c)
 {
-    return isPunct(c);
+    return u_ispunct(c);
 }
 
 class TextBreakIterator {
@@ -114,9 +113,9 @@ int WordBreakIterator::next()
     }
     bool haveSpace = false;
     while (currentPos < length) {
-        if (haveSpace && !isSpace(string[currentPos]))
+        if (haveSpace && !u_isspace(string[currentPos]))
             break;
-        if (isSpace(string[currentPos]))
+        if (u_isspace(string[currentPos]))
             haveSpace = true;
         ++currentPos;
     }
@@ -131,9 +130,9 @@ int WordBreakIterator::previous()
     }
     bool haveSpace = false;
     while (currentPos > 0) {
-        if (haveSpace && !isSpace(string[currentPos]))
+        if (haveSpace && !u_isspace(string[currentPos]))
             break;
-        if (isSpace(string[currentPos]))
+        if (u_isspace(string[currentPos]))
             haveSpace = true;
         --currentPos;
     }
